bioaps/bioaps-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: bioaps-deployment
    namespace: bioaps
    labels:
        app: bioaps
        tier: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: bioaps
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 2
            maxUnavailable: 1
    template:
        metadata:
            labels:
                app: bioaps
                tier: frontend
        spec:
            containers:
                - image: gcr.io/mi4u-303100/bioaps_bot_api:0.0.5
                  #command: ["sleep 600"]
                  imagePullPolicy: IfNotPresent
                  ports: 
                    - containerPort: 5000
                  name: biaops
                  resources: 
                    limits:
                      cpu: 1000
                      memory: 1000Mi
                    requests:
                      cpu: 300m
                      memory: 300Mi
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
            dnsPolicy: ClusterFirst
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            terminationGracePeriodSeconds: 10
