bioaps/bioaps-api-deployment_fila.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: bioaps-deployment-consumer
    namespace: bioaps
    labels:
        app: bioaps-consumer
        tier: frontend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: bioaps-consumer
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 2
            maxUnavailable: 1
    template:
        metadata:
            labels:
                app: bioaps-consumer
                tier: frontend
        spec:
            containers:
                - image: gcr.io/mi4u-303100/bioaps_bot_api:0.0.5
                  command: ["python"]
                  args: ["consumer_rmq.py"]
                  imagePullPolicy: IfNotPresent
                  name: biaops-consumer
                  resources: 
                    limits:
                      cpu: 2000
                      memory: 4000Mi
                    requests:
                      cpu: 300m
                      memory: 300Mi
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
            dnsPolicy: ClusterFirst
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            terminationGracePeriodSeconds: 10
