bioaps/bioaps-api-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: bioaps
    namespace: bioaps
    labels:
        app: bioaps
        tier: frontend
spec:
    type: NodePort
    ports:
        - port: 5000
    selector:
        app: bioaps
        tier: frontend
